# succession-fragility-and-organisation-capital

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: backtest.yml  data.yml  model.yml  schema_map.json  schema_map.manifest.json
docs/: data.md  index.md  methodology.md  results.md
jobs/: run_schema_audit.sbatch  run_synthetic.sbatch  run_wrds_extract_years.sbatch
reports/coverage/: boardex_coverage_by_year.csv  boardex_coverage_manifest.json
reports/dashboard/: public_aggregate_dashboard.html
scripts/: collect_manifest_copies.py  probe_wrds_columns.py  probe_wrds_tables.py  remote_analyze_panel.sh  remote_column_probe.sh  remote_coverage.sh  remote_dashboard.sh  remote_describe_tables.sh  remote_event_study.sh  remote_executive_deep_sets.sh  remote_extract_full_sample.sh  remote_extract_wrds.sh  remote_full_panel.sh  remote_gpu_probe.sh  remote_model_ladder.sh  remote_monitor_extract.sh  remote_monitor_panel.sh  remote_pytest.sh  remote_regimes.sh  remote_robustness.sh  remote_schema_audit.sh  remote_sharp_strategy.sh  remote_smoke.sh  remote_table_probe.sh  remote_wrds_smoke.sh  remote_wrds_smoke_panel.sh  secret_scan.py
sql/: wrds_boardex_extract.sql  wrds_ccm_links.sql  wrds_comp_extract.sql  wrds_crsp_extract.sql
src/succession_fragility/: __init__.py  cli.py
tests/: test_executive_sets.py  test_ocf_features.py  test_portfolio.py  test_research_integrity.py  test_secret_scan.py  test_sharp_strategy.py  test_synthetic_pipeline.py
(+74 files in other folders)
